--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
     "body-parser": "^1.20.2",
+    "buffer": "^6.0.3",
     "dotenv": "^16.0.3",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "firebase": "^9.1.3",
+    "fs": "^0.0.1-security",
     "googleapis": "^114.0.0",
+    "https-browserify": "^1.0.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
-    "path-browserify": "^1.0.1",
+    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-recaptcha": "^2.3.10",
@@ -27,6 +31,10 @@
     "react-toastify": "^9.1.1",
     "recoil": "^0.7.7",
     "redux": "^4.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -54,6 +62,10 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
+    "@types/node": "^18.15.11",
+    "@types/react-router-dom": "^5.3.3",
+    "crypto-browserify": "^3.12.0",
+    "path-browserify": "^1.0.1"
   }
+  
 }
